Mahout Change Log

Release 0.9 - unreleased

  MAHOUT-1358: StreamingKMeansThread throws IllegalArgumentException when REDUCE_STREAMING_KMEANS is set to true (smarthi)

  MAHOUT-1355: InteractionValueEncoder produces wrong traceDictionary entries (Johannes Schulte via smarthi)

  MAHOUT-1351: Adding DenseVector support to AbstractCluster (David DeBarr via smarthi)

  MAHOUT-1343: JSON output format support in cluster dumper (Telvis Calhoun via sslavic)

  MAHOUT-1333: Fixed examples bin directory permissions in distribution archives (Mike Percy via sslavic)

  MAHOUT-1314: StreamingKMeansReducer throws NullPointerException when REDUCE_STREAMING_KMEANS is set to true (smarthi)

  MAHOUT-1313: Fixed unwanted integral division bug in RowSimilarityJob downsampling code where precision should have been retained (sslavic) 

  MAHOUT-1301: toString() method of SequentialAccessSparseVector has excess comma at the end (Alexander Senov, smarthi)

  MAHOUT-1296: Remove deprecated algorithms (ssc)

  MAHOUT-1295: Excluded all Maven's target directories from distribution archives (sslavic)

  MAHOUT-1294: Cleanup previously installed artifacts from CI server local repository (sslavic)

  MAHOUT-1293: Source distribution tar.gz archive cannot be unpacked on Linux (sslavic)

  MAHOUT-1292: lucene2seq should validate the 'id' field (Frank Scholten via smarthi)

  MAHOUT-1291: MahoutDriver yields cosmetically suboptimal exception when bin/mahout runs without args, on some Hadoop versions (srowen)

  MAHOUT-1290: Issue when running Mahout Recommender Demo (Helder Garay Martins via smarthi)

  MAHOUT-1289: Move downsampling code into RowSimilarityJob (ssc)

  MAHOUT-1287: classifier.sgd.CsvRecordFactory incorrectly parses CSV format (Alex Franchuk via smarthi)

  MAHOUT-1284: DummyRecordWriter's bug with reused Writables (Maysam Yabandeh via smarthi)

  MAHOUT-1275: Dropped bz2 distribution format for source and binaries (sslavic)

Release 0.8 - 2013-07-25
